fixed profDash card spacing

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -108,7 +108,7 @@ h3 {
     z-index: 9999;
 }
 
-form       { margin:.1em auto; padding:.1em; width: 100%; border: 1px }
+form       {width: 100%; border: 1px }
 .heading  { font-weight: bold; margin-top: 30px;}
 .entry     { 
     margin-bottom: 2em; 
@@ -131,6 +131,8 @@ input {
     background-color: inherit;
     border: 0px;
     color: white;
+    padding:0;
+    margin-left: 25px !important;
 }
 
 .checkbox-container {
